--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "devDependencies": {
     "bootstrap": "^4.4.1",
     "grunt": "^1.0.4",
+    "grunt-contrib-csslint": "^2.0.0",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1"
   }
