--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/valeriaosoriou/formative3.1_vale#readme",
   "devDependencies": {
+    "@popperjs/core": "^2.0.6",
     "bootstrap": "^4.4.1",
     "grunt": "^1.0.4",
     "grunt-contrib-csslint": "^2.0.0",
