--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "formative3.1_vale",
+  "name": "exit",
   "version": "1.0.0",
   "description": "formative",
   "main": "index.js",
@@ -30,5 +30,8 @@
     "grunt-contrib-watch": "^1.1.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1"
+  },
+  "dependencies": {
+    "grunt-express-server": "^0.5.4"
   }
 }
