--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/valeriaosoriou/formative3.1_vale#readme",
   "devDependencies": {
-    "@popperjs/core": "^2.0.6", //fixed version
+    "@popperjs/core": "^2.0.6",
     "bootstrap": "^4.4.1",
     "eslint": "^6.8.0",
     "grunt": "^1.0.4",
